Project6_test/Project6_test/Project6_test.sdk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
10:16:10 **** Incremental Build of configuration Debug for project vga_test2 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
make: Nothing to be done for 'main-build'.
10:16:12 **** Incremental Build of configuration Debug for project vga_test2 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
make: Nothing to be done for 'main-build'.
10:16:28 **** Incremental Build of configuration Debug for project vga_test2 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../vga_test2_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
'Finished building: ../src/helloworld.c'
' '
'Building target: vga_test2.elf'
'Invoking: ARM v7 gcc linker'
arm-none-eabi-gcc -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -L../../vga_test2_bsp/ps7_cortexa9_0/lib -o "vga_test2.elf"  ./src/helloworld.o ./src/platform.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
'Finished building target: vga_test2.elf'
' '
'Invoking: ARM v7 Print Size'
arm-none-eabi-size vga_test2.elf  |tee "vga_test2.elf.size"
   text	   data	    bss	    dec	    hex	filename
  56620	   2584	  23328	  82532	  14264	vga_test2.elf
'Finished building: vga_test2.elf.size'
' '
10:18:02 **** Auto Build of configuration Debug for project vga_test2 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../vga_test2_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c: In function 'main':
../src/helloworld.c:64:2: error: too few arguments to function 'SLV_Reg_SelfTest'
  SLV_Reg_SelfTest();
  ^~~~~~~~~~~~~~~~
In file included from ../src/helloworld.c:52:
../../vga_test2_bsp/ps7_cortexa9_0/include/slv.h:77:9: note: declared here
 XStatus SLV_Reg_SelfTest(void * baseaddr_p);
         ^~~~~~~~~~~~~~~~
make: *** [src/subdir.mk:26: src/helloworld.o] Error 1
10:18:08 **** Auto Build of configuration Debug for project vga_test2 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../vga_test2_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
'Finished building: ../src/helloworld.c'
' '
'Building target: vga_test2.elf'
'Invoking: ARM v7 gcc linker'
arm-none-eabi-gcc -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -L../../vga_test2_bsp/ps7_cortexa9_0/lib -o "vga_test2.elf"  ./src/helloworld.o ./src/platform.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
'Finished building target: vga_test2.elf'
' '
'Invoking: ARM v7 Print Size'
arm-none-eabi-size vga_test2.elf  |tee "vga_test2.elf.size"
   text	   data	    bss	    dec	    hex	filename
  56620	   2584	  23328	  82532	  14264	vga_test2.elf
'Finished building: vga_test2.elf.size'
' '
10:18:12 **** Incremental Build of configuration Debug for project vga_test2 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
make: Nothing to be done for 'main-build'.
10:18:37 **** Incremental Build of configuration Debug for project vga_test2 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
make: Nothing to be done for 'main-build'.
